@@ -7,6 +7,9 @@ debhelper (13.1.1) UNRELEASED; urgency=medium
     to replace the hardcoded value.
   * d/changelog: Clarify that dh_installman change in 13.1 related to
     #958343.
+  * Dh_Lib.pm: Add support for raising compat deprecation warnings to
+    an error if there are pending removals.  This currently triggers
+    for usage of compat 5 and 6.
 
   [ Anel Husakovic ]
   * debhelper.7: Fix typo/grammatical errors.
